--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="description" content="allouchi - Votre Site Web Numero 1 en Tunisie de Vente des Moutons, Poules, Oeufs, Aalfa, etc...">
     <meta name="keywords" content="3alouche, allouche, allouchi, allouchi, 3alouchi, علوش , شراء علوش العيد , عيد الاضحى , Eid Kbir, djej, lham, 3lelech, aalelech, aalouchi.net, aalouchi.tn">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://scontent.ftun4-2.fna.fbcdn.net/v/t1.15752-9/354671672_250588797603709_4163798981858942408_n.jpg?stp=dst-jpg_p1080x2048&_nc_cat=111&ccb=1-7&_nc_sid=ae9488&_nc_ohc=jqPBa6NSqrUAX9E19ED&_nc_ht=scontent.ftun4-2.fna&oh=03_AdQ5Q3n_THaFLkcqN3pw5s7ui3F2PPzRUKyt7PtjQSr-9A&oe=64B3690D" />
+    <meta property="og:image" content="https://scontent.ftun14-1.fna.fbcdn.net/v/t1.15752-9/353883633_935579194192449_2849874633183642020_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=ae9488&_nc_ohc=wzGO7yLQpXYAX-fxw96&_nc_ht=scontent.ftun14-1.fna&oh=03_AdRjqQN10ab9sIH9mqbvbJMRcsuFuVpVZ4pNderIeucy5g&oe=64B719BF" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Allouchi - علوشي</title>
 
