--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Allouchi - علوشي</title>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4XGN0B0TLX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4XGN0B0TLX');
+    </script>
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap"
     rel="stylesheet">
